<resources>
    <string name="app_name">AutoBackground</string>
    <string name="wallpaper_description">AutoBackground</string>
    <string name="music_receiver_description">AutoBackground Music Receiver</string>
    <string name="daydream_description">AutoBackground Daydream</string>
    <string name="menu_help">Help</string>
    <string name="no_image_indicator">No images found. Try downloading some.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="letters_and_numbers">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="drawer_indicator_content_description">Open drawer</string>
    <string name="cycle_wallpaper_content_description">Cycle wallpaper</string>
    <string name="download_wallpaper_content_description">Download wallpaper</string>
    <string name="sort_sources_content_description">Sort sources</string>
    <string name="floating_add_button_content_description">Add source</string>
    <string name="title_source_settings">Source Settings</string>
    <string name="title_wallpaper_settings">Wallpaper Settings</string>
    <string name="title_effects_settings">Effect Settings</string>
    <string name="title_opengl_effects">Effect Parameters</string>
    <string name="title_interval_settings">Interval Settings</string>
    <string name="title_download_settings">Download Settings</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="title_notification_settings">Notification Settings</string>
    <string name="title_wear_settings">Wear Settings</string>
    <string name="title_app_settings">Application Settings</string>
    <string name="title_transition_settings">Transition Settings</string>
    <string name="title_animation_settings">Animation Settings</string>
    <string name="title_gesture_settings">Gesture Settings</string>
    <string name="title_about">About Application</string>
    <string name="title_about_libraries">Used Libraries</string>
    <string name="source_show_preview">Show Preview</string>
    <string name="source_show_preview_description">Load image preview into source list</string>
    <string name="source_time">Time Active</string>
    <string name="preserve_context">Preserve Context</string>
    <string name="preserve_context_description">Hold image texture in RAM to prevent reloading on return</string>
    <string name="use_double_image">Double Image</string>
    <string name="use_double_image_description">Spilt screen into two separate images</string>
    <string name="fill_images">Fill Images</string>
    <string name="fill_images_description">Fill screen with image</string>
    <string name="shuffle_images">Shuffle Images</string>
    <string name="shuffle_images_description">Shuffle images</string>
    <string name="scale_images">Scale Images</string>
    <string name="scale_images_description">Rescale images if lower/higher resolution</string>
    <string name="use_interval">Update Interval</string>
    <string name="use_interval_description">Change image after certain period</string>
    <string name="force_interval">Force Interval</string>
    <string name="force_interval_description">Force change on interval, rather than waiting for visibility change</string>
    <string name="on_return">Change on Return</string>
    <string name="on_return_description">New image on return</string>
    <string name="use_fade">Fade</string>
    <string name="use_fade_description">Fade between images</string>
    <string name="use_animation">Use Horizontal Animation</string>
    <string name="use_animation_description">Pan side to side animation</string>
    <string name="animation_speed">Horizontal Speed</string>
    <string name="animation_speed_description">Horizontal animation speed</string>
    <string name="animation_frame_rate">Frame Rate</string>
    <string name="animation_frame_rate_description">Rate of rendering</string>
    <string name="animation_frame_rate_hint">Frames per second</string>
    <string name="animation_safety">Animation Safety</string>
    <string name="animation_safety_description">Side buffer for animation in pixels</string>
    <string name="double_tap">Double Tap Gesture</string>
    <string name="double_tap_description">Change on double tap</string>
    <string name="force_parallax">Parallax Scrolling</string>
    <string name="force_parallax_description">Reverse direction of wallpaper scrolling</string>
    <string name="sort_sources">Sort Sources</string>
    <string name="download_wallpaper">Download Images</string>
    <string name="cycle_wallpaper">Cycle Wallpaper</string>
    <string name="use_timer">Download Timer</string>
    <string name="use_timer_description">Download interval</string>
    <string name="use_wifi">Use WiFi</string>
    <string name="use_wifi_description">Allow download on WiFi</string>
    <string name="force_download">Force Images</string>
    <string name="force_download_description">Attempt to force download</string>
    <string name="keep_images">Keep Images</string>
    <string name="keep_images_description">Keep all images in cache</string>
    <string name="use_experimental_downloader">Experimental Downloader</string>
    <string name="use_experimental_downloader_description">Include JavaScript generated websites</string>
    <string name="use_effects">Use OpenGL Effects</string>
    <string name="use_effects_description">Use OpenGL image effects</string>
    <string name="effects_frequency">Manual Frequency</string>
    <string name="effects_frequency_description">Chance of applying manual effects</string>
    <string name="random_effects_frequency">Random Frequency</string>
    <string name="random_effects_frequency_description">Chance of applying random effects</string>
    <string name="use_effects_override">Manual Override</string>
    <string name="use_effects_override_description">Force apply manual effects over random effects</string>
    <string name="use_random_effects">Random Effects</string>
    <string name="use_random_effects_description">Apply random effects</string>
    <string name="use_duotone_gray">Dual Tone Gray</string>
    <string name="use_duotone_gray_description">High contrast dual tone</string>
    <string name="use_toast_effects">Toast Effects</string>
    <string name="use_toast_effects_description">Display applied effect in message</string>
    <string name="reset_effects">Reset Effects</string>
    <string name="reset_effects_description">Reset to default values</string>
    <string name="effect_auto_fix">Auto Fix</string>
    <string name="effect_auto_fix_description">Auto Fix Image</string>
    <string name="effect_brightness">Brightness</string>
    <string name="effect_brightness_description">Brightness of image</string>
    <string name="effect_contrast">Contrast</string>
    <string name="effect_contrast_description">Contrast of image</string>
    <string name="effect_cross_process">Cross Process Effect</string>
    <string name="effect_cross_process_description">Cross process effect</string>
    <string name="effect_documentary">Documentary Effect</string>
    <string name="effect_documentary_description">Black and white effect</string>
    <string name="effect_duotone">Dual Tone</string>
    <string name="effect_duotone_description">Show image with two color tones</string>
    <string name="effect_fill_light">Fill Light Effect</string>
    <string name="effect_fill_light_description">Contrast of image</string>
    <string name="effect_fisheye">Fisheye Effect</string>
    <string name="effect_fisheye_description">Fisheye effect</string>
    <string name="blur_radius">Gaussian Blur Effect</string>
    <string name="blur_radius_description">Blur image, note this effect is not using OpenGL and is always applied</string>
    <string name="effect_grain">Grain Effect</string>
    <string name="effect_grain_description">Grain effect</string>
    <string name="effect_grayscale">Grayscale Effect</string>
    <string name="effect_grayscale_description">Grayscale effect</string>
    <string name="effect_lomoish">Lomoish Effect</string>
    <string name="effect_lomoish_description">Lomoish effect</string>
    <string name="effect_negative">Negative Effect</string>
    <string name="effect_negative_description">Invert image colors</string>
    <string name="effect_posterize">Posterize Effect</string>
    <string name="effect_posterize_description">Image posterization effect</string>
    <string name="effect_saturate">Saturation</string>
    <string name="effect_saturate_description">Satruation of image</string>
    <string name="effect_sepia">Sepia Effect</string>
    <string name="effect_sepia_description">Sepia tone effect</string>
    <string name="effect_sharpen">Sharpen Effect</string>
    <string name="effect_sharpen_description">Sharpen image</string>
    <string name="effect_temperature">Temperature</string>
    <string name="effect_temperature_description">Color temperature of image</string>
    <string name="effect_vignette">Vignette Effect</string>
    <string name="effect_vignette_description">Vignette effect</string>
    <string name="use_toast">Use Toasts</string>
    <string name="use_toast_description">Notify user of info on screen</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_theme_description">Use different app theme</string>
    <string name="use_advanced">Advanced Settings</string>
    <string name="use_advanced_description">Show advanced settings (will change user input of internal values), do not enable unless you know what you\'re doing</string>
    <string name="clear_pref">Reset Settings</string>
    <string name="clear_pref_description">Set default settings</string>
    <string name="use_notification">Use Notification</string>
    <string name="use_notification_description">Show a persistent notification, some options require Android 4.1+</string>
    <string name="use_notification_game">Notification Game</string>
    <string name="use_notification_game_description">Show a matching game in notification</string>
    <string name="fill_notification_image">Fill Image</string>
    <string name="fill_notification_image_description">Fill notification icon with image</string>
    <string name="notification_icon_action">Icon Action</string>
    <string name="notification_icon_action_description">Custom action on icon click</string>
    <string name="use_pin_indicator">Show Pin Indicator</string>
    <string name="use_pin_indicator_description">Show a pin overlay in the notification when image is pinned</string>
    <string name="history_size">Previous History Size</string>
    <string name="history_size_description">Number of images to store in previous buffer</string>
    <string name="about_library_jsoup">Jsoup Library</string>
    <string name="about_library_jsoup_description">Used to download and parse html.\nCopyright © 2009 – 2013 Jonathan Hedley (jonathan@hedley.net)</string>
    <string name="about_library_picasso">Picasso Library</string>
    <string name="about_library_picasso_description">Used to efficiently load some of the images.\nCopyright 2013 Square, Inc.</string>
    <string name="about_library_colorpickerview">ColorPickerView Library</string>
    <string name="about_library_colorpickerview_description">Used to provide color options.\nCopyright © 2010 Daniel Nilsson</string>
    <string name="about_self_copyright_description">Copyright © 2014 Winson Chiu</string>
    <string name="about_copyright">Library Copyrights and Licenses</string>
    <string name="about_copyright_description">Click to view full text</string>
    <string name="item_sort_activated">Activated</string>
    <string name="item_sort_location">Location</string>
    <string name="item_sort_name">Name</string>
    <string name="item_sort_number"># of Images</string>
</resources>