<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) Winson Chiu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory
        android:key="title_effects_settings"
        android:title="@string/title_effects_settings"
        >

        <Preference
            android:key="blur_radius"
            android:summary="@string/blur_radius_description"
            android:title="@string/blur_radius"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="use_effects"
            android:summary="@string/use_effects_description"
            android:title="@string/use_effects"
            />

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="100"
            android:key="effects_frequency"
            android:max="100"
            android:summary="@string/effects_frequency_description"
            android:title="@string/effects_frequency"
            />

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="100"
            android:key="random_effects_frequency"
            android:max="100"
            android:summary="@string/random_effects_frequency_description"
            android:title="@string/random_effects_frequency"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="use_effects_override"
            android:summary="@string/use_effects_override_description"
            android:title="@string/use_effects_override"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="use_random_effects"
            android:summary="@string/use_random_effects_description"
            android:title="@string/use_random_effects"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="use_duotone_gray"
            android:summary="@string/use_duotone_gray_description"
            android:title="@string/use_duotone_gray"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="use_toast_effects"
            android:summary="@string/use_toast_effects_description"
            android:title="@string/use_toast_effects"
            />

        <Preference
            android:key="reset_effects"
            android:summary="@string/reset_effects_description"
            android:title="@string/reset_effects"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="title_opengl_effects"
        android:title="@string/title_opengl_effects"
        >

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="0"
            android:key="effect_auto_fix"
            android:max="100"
            android:summary="@string/effect_auto_fix_description"
            android:title="@string/effect_auto_fix"
            />

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="100"
            android:key="effect_brightness"
            android:max="200"
            android:summary="@string/effect_brightness_description"
            android:title="@string/effect_brightness"
            />

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="100"
            android:key="effect_contrast"
            android:max="200"
            android:summary="@string/effect_contrast_description"
            android:title="@string/effect_contrast"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="effect_cross_process_switch"
            android:summary="@string/effect_cross_process_description"
            android:title="@string/effect_cross_process"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="effect_documentary_switch"
            android:summary="@string/effect_documentary_description"
            android:title="@string/effect_documentary"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:key="effect_duotone_switch"
            android:summary="@string/effect_duotone_description"
            android:title="@string/effect_duotone"
            />

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="0"
            android:key="effect_fill_light"
            android:max="100"
            android:summary="@string/effect_fill_light_description"
            android:title="@string/effect_fill_light"
            />

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="0"
            android:key="effect_fisheye"
            android:max="100"
            android:summary="@string/effect_fisheye_description"
            android:title="@string/effect_fisheye"
            />

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="0"
            android:key="effect_grain"
            android:max="100"
            android:summary="@string/effect_grain_description"
            android:title="@string/effect_grain"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="effect_grayscale_switch"
            android:summary="@string/effect_grayscale_description"
            android:title="@string/effect_grayscale"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="effect_lomoish_switch"
            android:summary="@string/effect_lomoish_description"
            android:title="@string/effect_lomoish"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="effect_negative_switch"
            android:summary="@string/effect_negative_description"
            android:title="@string/effect_negative"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="effect_posterize_switch"
            android:summary="@string/effect_posterize_description"
            android:title="@string/effect_posterize"
            />

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="100"
            android:key="effect_saturate"
            android:max="200"
            android:summary="@string/effect_saturate_description"
            android:title="@string/effect_saturate"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:defaultValue="false"
            android:key="effect_sepia_switch"
            android:summary="@string/effect_sepia_description"
            android:title="@string/effect_sepia"
            />

        <cw.kop.autobackground.EffectPreference
            android:key="effect_sharpen"
            android:max="100"
            android:summary="@string/effect_sharpen_description"
            android:title="@string/effect_sharpen"
            />

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="50"
            android:key="effect_temperature"
            android:max="100"
            android:summary="@string/effect_temperature_description"
            android:title="@string/effect_temperature"
            />

        <cw.kop.autobackground.EffectPreference
            android:defaultValue="0"
            android:key="effect_vignette"
            android:max="100"
            android:summary="@string/effect_vignette_description"
            android:title="@string/effect_vignette"
            />

    </PreferenceCategory>

</PreferenceScreen>