<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<PreferenceCategory
		android:title="@string/title_wallpaper_settings"
		>

		<cw.kop.autobackground.CustomSwitchPreference
			android:key="fill_images"
			android:defaultValue="true"
			android:title="@string/fill_images" 
			android:summary="@string/fill_images_description"
			/>
      
		<cw.kop.autobackground.CustomSwitchPreference
			android:key="shuffle_images"
			android:defaultValue="true"
			android:title="@string/shuffle_images" 
			android:summary="@string/shuffle_images_description"
			/>
      
	</PreferenceCategory>

	<PreferenceCategory
	    android:title="@string/title_interval_settings">
	
		<cw.kop.autobackground.CustomSwitchPreference
			android:key="use_interval"
			android:defaultValue="false"
			android:title="@string/use_interval" 
			android:dialogTitle="@string/use_interval"
			android:summary="@string/use_interval_description"
			/>
  
		<cw.kop.autobackground.CustomSwitchPreference
			android:key="force_interval"
			android:defaultValue="false"
			android:title="@string/force_interval" 
			android:dialogTitle="@string/force_interval"
			android:summary="@string/force_interval_description"
			/>
  
		<cw.kop.autobackground.CustomSwitchPreference
			android:key="on_return"
			android:defaultValue="true"
			android:title="@string/on_return"
			android:dialogTitle="@string/on_return"
			android:summary="@string/on_return_description"
			/>

        <cw.kop.autobackground.CustomSwitchPreference
            android:key="double_tap"
            android:defaultValue="true"
            android:title="@string/double_tap"
            android:dialogTitle="@string/double_tap"
            android:summary="@string/double_tap_description"
            />
		
	</PreferenceCategory>
	
	<PreferenceCategory
        android:key="title_animation_settings"
	    android:title="@string/title_animation_settings">

        <cw.kop.autobackground.CustomSwitchPreference
            android:key="force_parallax"
            android:defaultValue="true"
            android:title="@string/force_parallax"
            android:summary="@string/force_parallax_description"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:key="use_fade"
            android:defaultValue="true"
            android:title="@string/use_fade"
            android:summary="@string/use_fade_description"
            />

		<cw.kop.autobackground.CustomSwitchPreference
			android:key="use_animation"
			android:defaultValue="false"
			android:title="@string/use_animation"
			android:summary="@string/use_animation_description"
			/>

        <cw.kop.autobackground.SeekBarPreference
            android:key="animation_speed"
            android:max="10"
            android:defaultValue="1"
            android:title="@string/animation_speed"
            android:summary="@string/animation_speed_description"
            android:dialogMessage="pixels per frame"
            />

        <EditTextPreference
            android:key="animation_frame_rate"
            android:defaultValue="30"
            android:title="@string/animation_frame_rate"
            android:summary="@string/animation_frame_rate_description"
            android:hint="@string/animation_frame_rate_hint"
            />

        <EditTextPreference
            android:key="animation_safety_adv"
            android:defaultValue="50"
            android:title="@string/animation_safety"
            android:summary="@string/animation_safety_description"
            android:inputType="number"
            android:numeric="integer"
            android:maxLength="3"
            />

	</PreferenceCategory>	
		
</PreferenceScreen>
