<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<PreferenceCategory
		android:title="@string/title_app_settings"
		>

		<SwitchPreference
			android:key="use_notification"
			android:defaultValue="false"
			android:title="@string/use_notification" 
			android:summary="@string/use_notification_description"
			/>

        <SwitchPreference
            android:key="use_toast"
            android:defaultValue="true"
            android:title="@string/use_toast"
            android:summary="@string/use_toast_description"
            />

		<SwitchPreference
			android:key="force_multipane"
			android:defaultValue="false"
			android:title="@string/force_multipane" 
			android:summary="@string/force_multipane_description"
			/>
		
		<Preference
			android:key="change_theme"
			android:defaultValue="false"
			android:title="@string/change_theme"
			android:summary="@string/change_theme_description"
			/>

        <SwitchPreference
            android:key="use_advanced"
            android:defaultValue="false"
            android:title="@string/use_advanced"
            android:summary="@string/use_advanced_description"
            />

        <Preference
            android:key="clear_pref"
            android:title="@string/clear_pref"
            android:summary="@string/clear_pref_description"
            />

        <Preference
            android:key="show_tutorial"
            android:title="@string/show_tutorial"
            android:summary="@string/show_tutorial_description"
            />

	</PreferenceCategory>

</PreferenceScreen>
