<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="title_notification_settings"
        android:title="@string/title_notification_settings"
        >

        <cw.kop.autobackground.CustomSwitchPreference
            android:key="use_notification"
            android:defaultValue="false"
            android:title="@string/use_notification"
            android:summary="@string/use_notification_description"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:key="use_notification_game"
            android:defaultValue="false"
            android:title="@string/use_notification_game"
            android:summary="@string/use_notification_game_description"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:key="fill_notification_image"
            android:defaultValue="true"
            android:title="@string/fill_notification_image"
            android:summary="@string/fill_notification_image_description"
            />

        <Preference
            android:key="notification_icon_action"
            android:title="@string/notification_icon_action"
            android:summary="@string/notification_icon_action_description"
            />

        <cw.kop.autobackground.CustomSwitchPreference
            android:key="use_pin_indicator"
            android:defaultValue="true"
            android:title="@string/use_pin_indicator"
            android:summary="@string/use_pin_indicator_description"
            />

        <EditTextPreference
            android:key="history_size"
            android:defaultValue="5"
            android:title="@string/history_size"
            android:summary="@string/history_size_description"
            android:inputType="number"
            android:numeric="integer"
            android:maxLength="2"
            />

        <Preference
            android:key="show_tutorial_notification"
            android:title="@string/show_tutorial_notification"
            android:summary="@string/show_tutorial_notification_description"
            />

    </PreferenceCategory>

</PreferenceScreen>