<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) Winson Chiu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/item_cycle"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/cycle_wallpaper"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_download"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:title="@string/download_wallpaper"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort_sources"
        app:showAsAction="ifRoom"
        >

        <menu>
            <item
                android:id="@+id/item_sort_activated"
                android:title="@string/item_sort_activated"
                android:orderInCategory="100"
                />

            <item
                android:id="@+id/item_sort_location"
                android:title="@string/item_sort_location"
                android:orderInCategory="200"
                />

            <item
                android:id="@+id/item_sort_name"
                android:title="@string/item_sort_name"
                android:orderInCategory="300"
                />

            <item
                android:id="@+id/item_sort_number"
                android:title="@string/item_sort_number"
                android:orderInCategory="400"
                />

        </menu>

    </item>

</menu>